fix wrapping really long lines with no spaces

--- a/less/chat.less
+++ b/less/chat.less
@@ -16,6 +16,7 @@
 .message {
   margin-bottom: 4px;
   margin-top: 2px;
+  word-wrap: break-word;
 }
 
 .lobby-messages {
